widget-success_mode-redirect

--- a/view/frontend/templates/widget_form.phtml
+++ b/view/frontend/templates/widget_form.phtml
@@ -29,7 +29,8 @@
                 "formId": "alekseon-widget-form-<?= $block->getForm()->getId() ?>",
                 "formSubmitUrl": "<?= $block->getSubmitFormUrl() ?>",
                 "tabs": <?= $block->getTabsJson() ?>,
-                "success_mode": "<?= $block->getData('success_display_mode') ?>"
+                "success_mode": "<?= $block->getData('success_display_mode') ?>",
+                "formSuccessUrl": "<?= $escaper->escapeUrl($block->getSuccessFormUrl()) ?>"
             }
         }
     }
