widget-success_mode-redirect - CS refactor

--- a/view/frontend/templates/form/success.phtml
+++ b/view/frontend/templates/form/success.phtml
@@ -11,6 +11,6 @@
 
 $form = $block->getForm();
 ?>
-<?php if ($block->getForm()): ?>
+<?php if ($form): ?>
     <?= $block->getSuccessMessage(); ?>
 <?php endif ?>
