--- a/view/frontend/layout/alekseon_widgetforms_form_success.xml
+++ b/view/frontend/layout/alekseon_widgetforms_form_success.xml
@@ -8,7 +8,7 @@
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" layout="1column" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
         <referenceContainer name="content">
-            <block class="Alekseon\WidgetForms\Block\Success" name="widgetforms_success" template="Alekseon_WidgetForms::success.phtml"/>
+            <block class="Alekseon\WidgetForms\Block\Form\Success" name="widgetforms_success" template="Alekseon_WidgetForms::form/success.phtml"/>
         </referenceContainer>
     </body>
 </page>
